@@ -98,6 +98,9 @@ static char *build_container_info(const struct CONTAINER *_Nonnull container)
 	// container_id.
 	ret = k2v_add_comment(ret, "Container ID.");
 	ret = k2v_add_config(int, ret, "container_id", container->container_id);
+	// Just chroot.
+	ret = k2v_add_comment(ret, "Just chroot, do not create runtime dirs.");
+	ret = k2v_add_config(bool, ret, "just_chroot", container->just_chroot);
 	// extra_mountpoint.
 	for (int i = 0; true; i++) {
 		if (container->extra_mountpoint[i] == NULL) {
@@ -272,6 +275,8 @@ struct CONTAINER *read_info(struct CONTAINER *_Nullable container, const char *_
 	log("{base}ns_pid: %d", container->ns_pid);
 	// Get container_id.
 	container->container_id = k2v_get_key(int, "container_id", buf);
+	// Get just_chroot.
+	container->just_chroot = k2v_get_key(bool, "just_chroot", buf);
 	// Get env.
 	int envlen = k2v_get_key(char_array, "env", buf, container->env);
 	container->env[envlen] = NULL;
